2004-08-27  Peter Korsgaard <jacmet@sunsite.dk>  

	* doc/redboot_cmds.sgml: Fixed a minor typo with fis list

2004-08-17  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/redboot.cdl:
        * src/net/net_io.c: added CDL to allow the default server to
        be configured. Also respect the CYGSEM_REDBOOT_DEFAULT_NO_BOOTP
        setting.

2004-08-16  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/redboot.cdl:
        * src/load.c: Added cdl to control the size of the buffer used
        by getc. The size can have significant affect on load speed
        when loading from a filesystem.

2004-08-13  Jani Monoses <jani@iv.ro>

	* src/net/http_client.c: Fix off-by-one error in checking
	the HTTP response header, so the ending CRLF-CRLF is detected 
	even if it's the last 4 bytes in the buffer.

2004-08-10  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/redboot.cdl
        * src/load.c (load_elf_image): Added a CDL option to configure
        if the physical or virtual address in the headers should be used
        when loading the image.

2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>

        * cdl/redboot.cdl
        * src/fs/fileio.c (do_ls) Added an ls command so we can see what
        is inside the mounted filesystem.

2004-06-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (find_free): fix endless loop when removing a
	collapsed chunk from chunk table. Found by Laurent Gonzalez
	(fis_load): Fixed a compiler warning.

2004-05-31  Jani Monoses <jani@iv.ro>

	* src/main.c:
	* include/redboot.h: Get rid of unused workspace_size.
	
2004-05-16  Andrew Dyer  <adyer@righthandtech.com>
2004-05-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fs/ide.c: make sure IDE_STAT_BSY is 0 before checking other
	bits in the status register

2004-05-21  Ian Campbell  <icampbell@arcom.com>
	 
	* src/main.c: Make it build without CYGSEM_REDBOOT_FLASH_ALIASES.
	
2004-05-05  Gary Thomas  <gary@mlbassoc.com>
